--- a/mshtml.html
+++ b/mshtml.html
@@ -344,17 +344,15 @@
   .pathlink {color:#888;font-size:36px;text-decoration:none;}
 </style>
       <br />
-      <details>
         <summary>Settings</summary>
         <div>
           <span>Select&ensp;</span>
-          <input id="radio1" type="radio" name="OUT" value="" checked="true" /><span>文件图标（默认）</span>
+          <input id="radio1" type="radio" name="OUT" value="" checked="true" /><spa>Default icon</span>
           <input id="radio2" type="radio" name="OUT" value="" /><span>Choose others...</span>
         </div>
         <div style="display:none">
           <span>Marker</span>&ensp;<input style="width:80px" id="ident" type="text" value="tpWj" />&ensp;<span>[Key object]</span>
         </div>
-      </details>
       <div>&emsp;</div>
       <button id="btn">Merge</button>
       <nobr style="font-size:34px;">|</nobr>
