--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
       input{
       background:#fff;
       border:3px solid #000; 
-      height:1rem;
+      height:5%;
       border-radius:5px;
        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
        outline:none;
@@ -286,8 +286,8 @@
        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
       
       border-radius:8px;
-      height:2.5rem;
-      width:10rem;
+      height:7%;
+      width:35%;
       font-size: 16px;
       -webkit-transition-duration: 0.4s; /* Safari */
           transition-duration: 0.4s;
@@ -299,8 +299,8 @@
        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
       
       border-radius:8px;
-      height:2.5rem;
-      width:10rem;
+      height:7%;
+      width:35%;
       font-size: 16px;
       outline:none;
       }
@@ -308,8 +308,8 @@
       background:#fc0;
       border:3px solid #fc0;
       border-radius:5px;
-      height:2rem;
-      width:10rem;
+      height:6%;
+      width:35%;
        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
        outline:none;
       }
