--- a/filechanger.html
+++ b/filechanger.html
@@ -966,7 +966,7 @@ fawrap.id="wrap"+idn;
 fa.className="a2";
 fa.download=faname;
 fa.href=furl;
-fa.innerHTML="保存";
+fa.innerHTML="Save";
 fahrefbox.appendChild(fa);
 fawrap.appendChild(fatitle);
 fawrap.appendChild(fahrefbox);
@@ -975,7 +975,7 @@ if(arr[0][0].B.slice(0,6)=="image/"){
 let j=document.createElement("a");
 j.className="a2";
 j.href="javascript:resultpreview("+idn+")";
-j.innerHTML="预览";
+j.innerHTML="Preview";
 fahrefbox.appendChild(createVoidSpan(4));
 fahrefbox.appendChild(j);
 }
