--- a/mshtml.html
+++ b/mshtml.html
@@ -6,7 +6,7 @@
 <title>PicEncrypt</title>
 </head>
 <body oncontextmenu="return false" style="overflow-x:hidden">
-  <!--Note that there's no Citrus There!-->
+  <!--Note that there's no Citrus at There!-->
   <style>
     input{
     background:#fff;
