--- a/app.html
+++ b/app.html
@@ -288,6 +288,7 @@
       }
       button:hover{
       background:#ff0000;
+      color:#fff;
       font-size: 16px;
       outline:none;
       }
@@ -474,6 +475,7 @@
       }
       button{
         border:1px solid #fff;
+        background-color:#fff;
       }
       select{
         border:1px solid rgb(172, 172, 172);
